MDEV-11117 CHECK constraint fails on intermediate step of ALTER

Fixed the bug by failing the statement with an error message that explains
that an auto-increment column may not be used in an expression for a
check constraint, a default value or a generated column.
Added a test case.
Updated existing tests and results.